# huggingface-finder

./: .gitignore  README.md  kaggle.sh  main.py  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  catalog_models.yml  globals.yml  parameters.yml
env/: env-cpu-full.yml  env-cpu-history.yml  env-gpu-full.yml  env-gpu-history.yml
src/finder/: __main__.py  settings.py
src/hffinder/: __init__.py  __main__.py  settings.py
src/hffinder/extras/: api.py  api_tools.py  fs.py  hf.py  iso_639.py
src/hffinder/pipelines/: __init__.py  data.py  embeddings.py  pipeline.py  regex.py  tools.py
tests/: test_run.py
